@@ -89,6 +89,8 @@ sub make_catcher {
 sub had_no_warnings {
 	return 0 if $$ != $PID;
 
+        $do_end_test = 0; # for use with done_testing
+
 	local $SIG{__WARN__};
 	my $name = shift || "no warnings";
 
@@ -154,6 +156,16 @@ change to
   use Test::More tests => x + 1;
   use Test::NoWarnings;
 
+For scripts that use L<done_testing|Test::More/done_testing>, use:
+
+  use Test::More;
+  use Test::NoWarnings 'had_no_warnings';
+
+  ... # your actual tests
+
+  had_no_warnings;
+  done_testing;
+
 =head1 DESCRIPTION
 
 In general, your tests shouldn't produce warnings. This modules causes any
@@ -186,6 +198,10 @@ The warnings your test has generated so far are stored in an array. You can
 look inside and clear this whenever you want with C<warnings()> and
 C<clear_warnings>, however, if you are doing this sort of thing then you
 probably want to use L<Test::Warn> in combination with L<Test::NoWarnings>.
+
+If you have a test script written using L<done_testing|Test::More/done_testing>
+and no test plan, you have to call L</had_no_warnings> before you call
+L<done_testing|Test::More/done_testing>.
 
 =head2 use vs require
 
